--- a/hw_2_autoencoders.ipynb
+++ b/hw_2_autoencoders.ipynb
@@ -17,8 +17,7 @@
     "from torchvision.transforms import Compose, Grayscale, Resize, ToTensor, Normalize\n",
     "from PIL import Image\n",
     "from torch.utils.tensorboard import SummaryWriter\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt"
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -30,18 +29,16 @@
     "    def __init__(self, input_height, input_width):\n",
     "        super(ImprovedAutoencoder, self).__init__()\n",
     "\n",
-    "        # Определяем размер после свёрточных слоёв\n",
     "        def conv_output_size(size, kernel_size=3, stride=2, padding=1):\n",
     "            return (size - kernel_size + 2 * padding) // stride + 1\n",
     "\n",
     "        h, w = input_height, input_width\n",
-    "        h, w = conv_output_size(h), conv_output_size(w)  # 1-й слой\n",
-    "        h, w = conv_output_size(h), conv_output_size(w)  # 2-й слой\n",
-    "        h, w = conv_output_size(h), conv_output_size(w)  # 3-й слой\n",
+    "        h, w = conv_output_size(h), conv_output_size(w)\n",
+    "        h, w = conv_output_size(h), conv_output_size(w)\n",
+    "        h, w = conv_output_size(h), conv_output_size(w)\n",
     "\n",
-    "        self.flattened_size = h * w * 128  # Выход из Encoder\n",
+    "        self.flattened_size = h * w * 128\n",
     "\n",
-    "        # Encoder\n",
     "        self.encoder = nn.Sequential(\n",
     "            nn.Conv2d(1, 32, kernel_size=3, stride=2, padding=1),\n",
     "            nn.BatchNorm2d(32),\n",
@@ -55,14 +52,12 @@
     "            nn.Flatten(),\n",
     "        )\n",
     "\n",
-    "        # Bottleneck\n",
     "        self.bottleneck = nn.Sequential(\n",
     "            nn.Linear(self.flattened_size, 64),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(0.3),\n",
     "        )\n",
     "\n",
-    "        # Decoder\n",
     "        self.decoder = nn.Sequential(\n",
     "            nn.Linear(64, self.flattened_size),\n",
     "            nn.Unflatten(1, (128, h, w)),\n",
@@ -121,15 +116,14 @@
    "outputs": [],
    "source": [
     "batch_size = 32\n",
-    "learning_rate = 0.000252\n",
+    "learning_rate = 0.00025\n",
     "num_epochs = 10\n",
-    "image_size = (128, 128)  # Размер входного изображения\n",
+    "image_size = (128, 128)\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
     "# TensorBoard writer\n",
     "writer = SummaryWriter(log_dir=\"logs/final_autoencoder\")\n",
     "\n",
-    "# Загрузка данных\n",
     "data_dir = 'dataset/train'\n",
     "transform = Compose([\n",
     "    Grayscale(num_output_channels=1),\n",
@@ -164,7 +158,6 @@
     "train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=1, shuffle=False)\n",
     "\n",
-    "# Модель, оптимизатор, функция потерь\n",
     "model = ImprovedAutoencoder(input_height=image_size[0], input_width=image_size[1]).to(device)\n",
     "optimizer = Adam(model.parameters(), lr=learning_rate)\n",
     "criterion = torch.nn.MSELoss()\n",
@@ -338,11 +331,9 @@
     "    for inputs in tqdm(train_loader, desc=f\"Epoch {epoch+1}/{num_epochs} - Training\"):\n",
     "        inputs = inputs.to(device)\n",
     "\n",
-    "        # Forward pass\n",
     "        outputs = model(inputs)\n",
     "        loss = criterion(outputs, inputs)\n",
     "\n",
-    "        # Backward pass\n",
     "        optimizer.zero_grad()\n",
     "        loss.backward()\n",
     "        optimizer.step()\n",
@@ -352,14 +343,12 @@
     "    train_loss /= len(train_loader.dataset)\n",
     "    writer.add_scalar(\"Loss/Train\", train_loss, epoch)\n",
     "\n",
-    "    # Валидация\n",
     "    model.eval()\n",
     "    val_loss = 0.0\n",
     "    with torch.no_grad():\n",
     "        for inputs in tqdm(val_loader, desc=f\"Epoch {epoch+1}/{num_epochs} - Validation\"):\n",
     "            inputs = inputs.to(device)\n",
     "\n",
-    "            # Forward pass\n",
     "            outputs = model(inputs)\n",
     "            loss = criterion(outputs, inputs)\n",
     "\n",
@@ -369,7 +358,6 @@
     "    writer.add_scalar(\"Loss/Validation\", val_loss, epoch)\n",
     "    scheduler.step(val_loss)\n",
     "\n",
-    "    # Сохранение лучшей модели\n",
     "    if val_loss < best_val_loss:\n",
     "        best_val_loss = val_loss\n",
     "        torch.save(model.state_dict(), \"models/best_autoencoder.pth\")\n",
@@ -529,28 +517,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 3794/3794 [00:04<00:00, 826.93it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True Positive Rate (TPR): 31.78%\n",
-      "True Negative Rate (TNR): 69.77%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+      "100%|██████████| 3794/3794 [00:04<00:00, 827.58it/s]\n"
      ]
     }
    ],
@@ -562,9 +535,28 @@
     "test_loader = DataLoader(test_dataset, batch_size=1, shuffle=False)\n",
     "predictions = classify_images(model, test_loader, device, optimal_threshold)\n",
     "\n",
-    "tpr, tnr = evaluate_model(predictions, annotations_path)\n",
+    "tpr, tnr = evaluate_model(predictions, annotations_path)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True Positive Rate (TPR): 90.30%\n",
+      "True Negative Rate (TNR): 92.10%\n"
+     ]
+    }
+   ],
+   "source": [
     "print(f\"True Positive Rate (TPR): {tpr:.2%}\")\n",
-    "print(f\"True Negative Rate (TNR): {tnr:.2%}\")\n"
+    "print(f\"True Negative Rate (TNR): {tnr:.2%}\")"
    ],
    "metadata": {
     "collapsed": false
