--- a/hw_2_autoencoders.ipynb
+++ b/hw_2_autoencoders.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "    def __getitem__(self, idx):\n",
     "        img_path = self.image_paths[idx]\n",
-    "        image = Image.open(img_path).convert(\"L\")  # Преобразуем в черно-белое изображение\n",
+    "        image = Image.open(img_path).convert(\"L\")\n",
     "        if self.transform:\n",
     "            image = self.transform(image)\n",
     "        return image"
@@ -121,7 +121,6 @@
     "image_size = (128, 128)\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "\n",
-    "# TensorBoard writer\n",
     "writer = SummaryWriter(log_dir=\"logs/final_autoencoder\")\n",
     "\n",
     "data_dir = 'dataset/train'\n",
